// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.add > functionality > auto-accepted by the counterparty > counterparty's debt did exist before - picked by receipt id & owner  user id 1`] = `
{
  "added": {
    "debts": {
      "id:d45ba957-33d6-4327-a1af-f663c47d4b98|ownerUserId:e4de7eec-c788-425d-be51-3ccc7495dc1b": {
        "amount": "947.9500",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "TJS",
        "id": "d45ba957-33d6-4327-a1af-f663c47d4b98",
        "note": "corroboro sono carcer",
        "ownerUserId": "e4de7eec-c788-425d-be51-3ccc7495dc1b",
        "peerId": "0e1ecadf-55d1-41a7-8c05-08453dcbfe1a",
        "receiptId": "10b2e962-209b-41c7-b31a-4b92a7dc4698",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
  "updated": {
    "debts": {
      "id:d45ba957-33d6-4327-a1af-f663c47d4b98|ownerUserId:3673843c-4815-4f41-b962-d2bbebad81da": {
        "amount": "-947.9500",
        "currencyCode": "TJS",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.add > functionality > auto-accepted by the counterparty > counterparty's debt didn't exist before 1`] = `
{
  "added": {
    "debts": {
      "id:cfeee5e0-c00d-441c-95e9-a68a236e2198|ownerUserId:b6e7cd07-7de7-402c-82aa-a67d0c5c8aa9": {
        "amount": "-322.8900",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "TMT",
        "id": "cfeee5e0-c00d-441c-95e9-a68a236e2198",
        "note": "carcer reprehenderit decet",
        "ownerUserId": "b6e7cd07-7de7-402c-82aa-a67d0c5c8aa9",
        "peerId": "fdc837ca-329e-4200-967f-80d10f65dce9",
        "receiptId": "ddad06df-d8e6-4bc5-8232-5fb508699a26",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:cfeee5e0-c00d-441c-95e9-a68a236e2198|ownerUserId:f8b9b427-3a03-488e-bd6b-fa068fb24ffd": {
        "amount": "322.8900",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "TMT",
        "id": "cfeee5e0-c00d-441c-95e9-a68a236e2198",
        "note": "carcer reprehenderit decet",
        "ownerUserId": "f8b9b427-3a03-488e-bd6b-fa068fb24ffd",
        "peerId": "1e31106a-5d43-4bb0-9c84-3ad22e9829b0",
        "receiptId": "ddad06df-d8e6-4bc5-8232-5fb508699a26",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`debts.add > functionality > debt is added - autogenerated timestamp 1`] = `
{
  "added": {
    "debts": {
      "id:32d843cd-be67-4e7d-b20b-618d7139b8fd|ownerUserId:f0454ba9-b16d-4740-929d-60dfa7dd1840": {
        "amount": "-61.3400",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "JMD",
        "id": "32d843cd-be67-4e7d-b20b-618d7139b8fd",
        "note": "color vacuus depopulo",
        "ownerUserId": "f0454ba9-b16d-4740-929d-60dfa7dd1840",
        "peerId": "040b6d09-0d5e-452b-848a-24fbe2931c7f",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`debts.add > functionality > debt is added - peer-provided timestamp 1`] = `
{
  "added": {
    "debts": {
      "id:d8cb8b2a-d8c3-45b9-bf44-51f0ee882a08|ownerUserId:c7c75e56-5c4b-45b1-bd89-cfaeda989c77": {
        "amount": "-449.8200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "GTQ",
        "id": "d8cb8b2a-d8c3-45b9-bf44-51f0ee882a08",
        "note": "toties antepono coma",
        "ownerUserId": "c7c75e56-5c4b-45b1-bd89-cfaeda989c77",
        "peerId": "6add9240-39f2-4f85-86b2-3ace4b3786f3",
        "receiptId": null,
        "timestamp": "2021-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`debts.add > functionality > multiple debts > for the same auto-accepting  user 1`] = `
{
  "added": {
    "debts": {
      "id:19f86a00-f92d-4b5c-a437-d8b8040cd47d|ownerUserId:3d30fc9d-f7fa-4da3-b7c7-315cc5d34496": {
        "amount": "731.1200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "LSL",
        "id": "19f86a00-f92d-4b5c-a437-d8b8040cd47d",
        "note": "campana tametsi defaeco",
        "ownerUserId": "3d30fc9d-f7fa-4da3-b7c7-315cc5d34496",
        "peerId": "fdd31fe1-80a5-4423-9218-093793382ab8",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:19f86a00-f92d-4b5c-a437-d8b8040cd47d|ownerUserId:42e4a5be-32b8-4850-82ed-d030bab30542": {
        "amount": "-731.1200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "LSL",
        "id": "19f86a00-f92d-4b5c-a437-d8b8040cd47d",
        "note": "campana tametsi defaeco",
        "ownerUserId": "42e4a5be-32b8-4850-82ed-d030bab30542",
        "peerId": "76b7866b-ded8-46c0-bfc3-5ece2cad710d",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:26722150-c9f5-4e40-b425-3a96f4f60d66|ownerUserId:3d30fc9d-f7fa-4da3-b7c7-315cc5d34496": {
        "amount": "262.1200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "NAD",
        "id": "26722150-c9f5-4e40-b425-3a96f4f60d66",
        "note": "cena amaritudo stella",
        "ownerUserId": "3d30fc9d-f7fa-4da3-b7c7-315cc5d34496",
        "peerId": "fdd31fe1-80a5-4423-9218-093793382ab8",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:26722150-c9f5-4e40-b425-3a96f4f60d66|ownerUserId:42e4a5be-32b8-4850-82ed-d030bab30542": {
        "amount": "-262.1200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "NAD",
        "id": "26722150-c9f5-4e40-b425-3a96f4f60d66",
        "note": "cena amaritudo stella",
        "ownerUserId": "42e4a5be-32b8-4850-82ed-d030bab30542",
        "peerId": "76b7866b-ded8-46c0-bfc3-5ece2cad710d",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:8d2bde3d-0ce6-4abd-af5f-0dd4365b59ae|ownerUserId:3d30fc9d-f7fa-4da3-b7c7-315cc5d34496": {
        "amount": "954.2000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "GIP",
        "id": "8d2bde3d-0ce6-4abd-af5f-0dd4365b59ae",
        "note": "carus triumphus contabesco",
        "ownerUserId": "3d30fc9d-f7fa-4da3-b7c7-315cc5d34496",
        "peerId": "fdd31fe1-80a5-4423-9218-093793382ab8",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:8d2bde3d-0ce6-4abd-af5f-0dd4365b59ae|ownerUserId:42e4a5be-32b8-4850-82ed-d030bab30542": {
        "amount": "-954.2000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "GIP",
        "id": "8d2bde3d-0ce6-4abd-af5f-0dd4365b59ae",
        "note": "carus triumphus contabesco",
        "ownerUserId": "42e4a5be-32b8-4850-82ed-d030bab30542",
        "peerId": "76b7866b-ded8-46c0-bfc3-5ece2cad710d",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`debts.add > functionality > multiple debts > some are auto-accepted by the counterparty 1`] = `
{
  "added": {
    "debts": {
      "id:238d48ae-ec9b-4df0-92b6-8c6871f65790|ownerUserId:2acaf486-c501-448c-befd-d767e37d6e0f": {
        "amount": "462.9200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "NIO",
        "id": "238d48ae-ec9b-4df0-92b6-8c6871f65790",
        "note": "vitae videlicet clam",
        "ownerUserId": "2acaf486-c501-448c-befd-d767e37d6e0f",
        "peerId": "98e77302-6096-455b-8404-efdd72f4e499",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:238d48ae-ec9b-4df0-92b6-8c6871f65790|ownerUserId:90019f04-50fd-4e72-8a88-6dcf5157c17f": {
        "amount": "-462.9200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "NIO",
        "id": "238d48ae-ec9b-4df0-92b6-8c6871f65790",
        "note": "vitae videlicet clam",
        "ownerUserId": "90019f04-50fd-4e72-8a88-6dcf5157c17f",
        "peerId": "6c023500-cf1a-429c-a666-51c28293437b",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:9f1c5b42-d2cc-40fb-b353-3a1d61a00dad|ownerUserId:90019f04-50fd-4e72-8a88-6dcf5157c17f": {
        "amount": "364.6000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "RON",
        "id": "9f1c5b42-d2cc-40fb-b353-3a1d61a00dad",
        "note": "qui termes atqui",
        "ownerUserId": "90019f04-50fd-4e72-8a88-6dcf5157c17f",
        "peerId": "7ceb6b74-b8ff-4409-88ea-d24ccf38d3cf",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:9f1c5b42-d2cc-40fb-b353-3a1d61a00dad|ownerUserId:fa87e690-0720-4113-be21-ed7f6e908965": {
        "amount": "-364.6000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "RON",
        "id": "9f1c5b42-d2cc-40fb-b353-3a1d61a00dad",
        "note": "qui termes atqui",
        "ownerUserId": "fa87e690-0720-4113-be21-ed7f6e908965",
        "peerId": "b94737b6-dd8b-4965-88a1-31f95cb716df",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:d0d5a79c-4684-42c6-9768-2c1dc90e5a41|ownerUserId:90019f04-50fd-4e72-8a88-6dcf5157c17f": {
        "amount": "167.3600",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "UZS",
        "id": "d0d5a79c-4684-42c6-9768-2c1dc90e5a41",
        "note": "aestas certe thalassinus",
        "ownerUserId": "90019f04-50fd-4e72-8a88-6dcf5157c17f",
        "peerId": "7ceb6b74-b8ff-4409-88ea-d24ccf38d3cf",
        "receiptId": "4416355f-6b7c-4ca7-80d2-b9cfcca167c1",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:d0d5a79c-4684-42c6-9768-2c1dc90e5a41|ownerUserId:fa87e690-0720-4113-be21-ed7f6e908965": {
        "amount": "-167.3600",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "UZS",
        "id": "d0d5a79c-4684-42c6-9768-2c1dc90e5a41",
        "note": "aestas certe thalassinus",
        "ownerUserId": "fa87e690-0720-4113-be21-ed7f6e908965",
        "peerId": "b94737b6-dd8b-4965-88a1-31f95cb716df",
        "receiptId": "4416355f-6b7c-4ca7-80d2-b9cfcca167c1",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:deb14f28-3fc9-4eec-9a03-e0e95cd79cfb|ownerUserId:90019f04-50fd-4e72-8a88-6dcf5157c17f": {
        "amount": "-695.9000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "HNL",
        "id": "deb14f28-3fc9-4eec-9a03-e0e95cd79cfb",
        "note": "amiculum bestia depulso",
        "ownerUserId": "90019f04-50fd-4e72-8a88-6dcf5157c17f",
        "peerId": "18ff71c7-3d1b-41d2-94eb-8774d4b4bbea",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`debts.add > functionality > multiple debts > some auto-accepting users already had debts picked by the same receipt id 1`] = `
{
  "added": {
    "debts": {
      "id:911470f4-4407-4506-9d26-7608e8b70e8a|ownerUserId:4c57f59b-d668-41c1-bcda-7e6f4c6dab73": {
        "amount": "31.5500",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "TMT",
        "id": "911470f4-4407-4506-9d26-7608e8b70e8a",
        "note": "crinis tactus vulgus",
        "ownerUserId": "4c57f59b-d668-41c1-bcda-7e6f4c6dab73",
        "peerId": "34fd8c46-1119-4442-b13a-b29c6996c484",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:911470f4-4407-4506-9d26-7608e8b70e8a|ownerUserId:6afb8ffb-7672-402d-b82b-c48e5ed71ee7": {
        "amount": "-31.5500",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "TMT",
        "id": "911470f4-4407-4506-9d26-7608e8b70e8a",
        "note": "crinis tactus vulgus",
        "ownerUserId": "6afb8ffb-7672-402d-b82b-c48e5ed71ee7",
        "peerId": "ea80f38f-375b-45ca-aefd-bd9771b72c38",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:b1ff2bb7-6e91-495a-b04f-6468c9135121|ownerUserId:4c57f59b-d668-41c1-bcda-7e6f4c6dab73": {
        "amount": "-641.5900",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "DJF",
        "id": "b1ff2bb7-6e91-495a-b04f-6468c9135121",
        "note": "cubo usus conturbo",
        "ownerUserId": "4c57f59b-d668-41c1-bcda-7e6f4c6dab73",
        "peerId": "34fd8c46-1119-4442-b13a-b29c6996c484",
        "receiptId": "4a27604a-e967-4458-be9f-d9cce0826137",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:c2e05025-9f19-4f57-96fa-34fc54385e83|ownerUserId:4c57f59b-d668-41c1-bcda-7e6f4c6dab73": {
        "amount": "305.2000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "XOF",
        "id": "c2e05025-9f19-4f57-96fa-34fc54385e83",
        "note": "valde certe culpo",
        "ownerUserId": "4c57f59b-d668-41c1-bcda-7e6f4c6dab73",
        "peerId": "34fd8c46-1119-4442-b13a-b29c6996c484",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:c2e05025-9f19-4f57-96fa-34fc54385e83|ownerUserId:6afb8ffb-7672-402d-b82b-c48e5ed71ee7": {
        "amount": "-305.2000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "XOF",
        "id": "c2e05025-9f19-4f57-96fa-34fc54385e83",
        "note": "valde certe culpo",
        "ownerUserId": "6afb8ffb-7672-402d-b82b-c48e5ed71ee7",
        "peerId": "ea80f38f-375b-45ca-aefd-bd9771b72c38",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
  "updated": {
    "debts": {
      "id:b1ff2bb7-6e91-495a-b04f-6468c9135121|ownerUserId:6afb8ffb-7672-402d-b82b-c48e5ed71ee7": {
        "amount": "641.5900",
        "currencyCode": "DJF",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.add > input verification > mixed success and fail 1`] = `
{
  "added": {
    "debts": {
      "id:bb9c6125-1c9a-40c3-bb1f-7e6c4e870372|ownerUserId:1d263b1a-801e-44e4-a018-32c2cbc9f60e": {
        "amount": "-535.2300",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "MUR",
        "id": "bb9c6125-1c9a-40c3-bb1f-7e6c4e870372",
        "note": "creber cometes alias",
        "ownerUserId": "1d263b1a-801e-44e4-a018-32c2cbc9f60e",
        "peerId": "8de070d3-b416-4c09-9fa4-81f293c86ae0",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;
